fix(responsive): prevent images in <img> from overflowing on mobile (#69)
* fix(responsive): prevent images in <img> from overflowing on mobile

* add

* add

* add

* add

* addd

* addd

* remove padding

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -94,8 +94,17 @@ figure img {
   margin-top: 3rem;
   margin-bottom: 3rem;
   max-width: 600px;
+  width: 100%;
   object-fit: cover;
   align-self: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.img-400 {
+  max-width: 600px;
+  width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -130,6 +139,11 @@ figure img {
   .container > iframe,
   .container > img {
     max-width: 90vw !important;
+  }
+  .img-rounded,
+  .img-400 {
+    max-width: 90vw;
+    box-sizing: border-box;
   }
 }
 
